--- a/index.html
+++ b/index.html
@@ -16,5 +16,97 @@
 
     <title>Web JS Vainilla</title>
   </head>
-  <body></body>
+  <body>
+    <div class="layout">
+      <header class="layout__header">
+        <h1 class="header__title">proyecto js</h1>
+        <nav class="header__nav">
+          <ul class="nav__menu">
+            <li class="menu__item">
+              <a href="#">inicio</a>
+            </li>
+            <li class="menu__item">
+              <a href="#">reloj</a>
+            </li>
+            <li class="menu__item">
+              <a href="#">acordeón</a>
+            </li>
+            <li class="menu__item">
+              <a href="#">sobre mi</a>
+            </li>
+            <li class="menu__item">
+              <a href="#">contacto</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <section class="layout__slider">
+        <div class="slider__content">
+          <img src="assets/img/hojas.jpg" alt="hojas" />
+        </div>
+      </section>
+      <main class="layout__article">
+        <div class="article_content">
+          <h2 class="article__title">articulo 1</h2>
+          <span class="article__date">publicado el 7 marzo del 2024</span>
+          <p class="article__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
+            aliquam voluptas nulla praesentium rem numquam nostrum asperiores
+            pariatur assumenda, in odit cumque facere? Hic quisquam iusto labore
+            enim, fugiat dolorum!
+          </p>
+          <button type="button" class="article__button">leer mas</button>
+        </div>
+        <div class="article_content">
+          <h2 class="article__title">articulo 2</h2>
+          <span class="article__date">publicado el 7 marzo del 2024</span>
+          <p class="article__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
+            aliquam voluptas nulla praesentium rem numquam nostrum asperiores
+            pariatur assumenda, in odit cumque facere? Hic quisquam iusto labore
+            enim, fugiat dolorum!
+          </p>
+          <button type="button" class="article__button">leer mas</button>
+        </div>
+        <div class="article_content">
+          <h2 class="article__title">articulo 3</h2>
+          <span class="article__date">publicado el 7 marzo del 2024</span>
+          <p class="article__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
+            aliquam voluptas nulla praesentium rem numquam nostrum asperiores
+            pariatur assumenda, in odit cumque facere? Hic quisquam iusto labore
+            enim, fugiat dolorum!
+          </p>
+          <button type="button" class="article__button">leer mas</button>
+        </div>
+      </main>
+    </div>
+    <aside class="widget">
+      <div class="widget__content">
+        <h3 class="widget__title">quien soy</h3>
+        <img src="./assets/img/caracol.jpg" alt="caracol" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis
+          illum sapiente modi maxime possimus sunt dolores repudiandae tempora
+          quae ut iste eum deserunt amet hic cupiditate, delectus atque esse
+          corrupti.
+        </p>
+      </div>
+      <div class="widget__content">
+        <h3 class="widget__title">identificate</h3>
+        <form class="widget__form">
+          <label for="name">Nombre:</label>
+          <input type="text" name="name" id="name" />
+          <label for="email">Correo:</label>
+          <input type="email" name="email" id="email" />
+          <label for="password">Contraseña:</label>
+          <input type="password" name="password" id="password" />
+        </form>
+        <input type="submit" value="Entrar" />
+      </div>
+    </aside>
+    <footer class="footer">
+      Todos los derechos reservados a Victor Robles &copy;
+    </footer>
+  </body>
 </html>
