--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
           <button type="button" class="article__button">leer mas</button>
         </div>
       </main>
+      <aside class="widget">
+        <div class="widget__content">
+          <h3 class="widget__title">quien soy</h3>
+          <img src="./assets/img/caracol.jpg" alt="caracol" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Perspiciatis illum sapiente modi maxime possimus sunt dolores
+            repudiandae tempora quae ut iste eum deserunt amet hic cupiditate,
+            delectus atque esse corrupti.
+          </p>
+        </div>
+        <div class="widget__content">
+          <h3 class="widget__title">identificate</h3>
+          <form class="widget__form">
+            <label for="name">Nombre:</label>
+            <input type="text" name="name" id="name" />
+            <label for="email">Correo:</label>
+            <input type="email" name="email" id="email" />
+            <label for="password">Contraseña:</label>
+            <input type="password" name="password" id="password" />
+          </form>
+          <input type="submit" value="Entrar" />
+        </div>
+      </aside>
     </div>
-    <aside class="widget">
-      <div class="widget__content">
-        <h3 class="widget__title">quien soy</h3>
-        <img src="./assets/img/caracol.jpg" alt="caracol" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis
-          illum sapiente modi maxime possimus sunt dolores repudiandae tempora
-          quae ut iste eum deserunt amet hic cupiditate, delectus atque esse
-          corrupti.
-        </p>
-      </div>
-      <div class="widget__content">
-        <h3 class="widget__title">identificate</h3>
-        <form class="widget__form">
-          <label for="name">Nombre:</label>
-          <input type="text" name="name" id="name" />
-          <label for="email">Correo:</label>
-          <input type="email" name="email" id="email" />
-          <label for="password">Contraseña:</label>
-          <input type="password" name="password" id="password" />
-        </form>
-        <input type="submit" value="Entrar" />
-      </div>
-    </aside>
     <footer class="footer">
       Todos los derechos reservados a Victor Robles &copy;
     </footer>
