ajuste maquetación html slider

--- a/index.html
+++ b/index.html
@@ -41,9 +41,17 @@
         </nav>
       </header>
       <section class="layout__slider">
+        <button class="slider__btn-prev">
+          <i class="slider__icon fa-solid fa-caret-left"></i>
+        </button>
         <div class="slider__content">
-          <img src="assets/img/hojas.jpg" alt="hojas" />
+          <img src="./assets/img/hojas.jpg" alt="verano" />
+          <img src="./assets/img/rojo.jpg" alt="otoño" />
+          <img src="./assets/img/cielo.jpg" alt="cielo" />
         </div>
+        <button class="slider__btn-prev">
+          <i class="slider__icon fa-solid fa-caret-right"></i>
+        </button>
       </section>
       <main class="layout__article">
         <div class="article_content">
