--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
         </nav>
       </header>
       <section class="layout__slider">
-        <button class="slider__btn-prev">
+        <button class="slider__btn slider__btn-prev">
           <i class="slider__icon fa-solid fa-caret-left"></i>
         </button>
         <div class="slider__content">
-          <img src="./assets/img/hojas.jpg" alt="verano" />
-          <img src="./assets/img/rojo.jpg" alt="otoño" />
-          <img src="./assets/img/cielo.jpg" alt="cielo" />
+          <img
+            src="./assets/img/hojas.jpg"
+            alt="verano"
+            class="slider__img slider__img--active"
+          />
         </div>
-        <button class="slider__btn-prev">
+        <button class="slider__btn slider__btn-next">
           <i class="slider__icon fa-solid fa-caret-right"></i>
         </button>
       </section>
