--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
       </main>
       <aside class="widget">
         <div class="widget__content">
-          <h3 class="widget__title">quien soy</h3>
+          <h3 class="widget__title">
+            <span class="title__span">¿quien soy?</span>
+          </h3>
           <img src="./assets/img/caracol.jpg" alt="caracol" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -102,7 +104,9 @@
           </p>
         </div>
         <div class="widget__content">
-          <h3 class="widget__title">identificate</h3>
+          <h3 class="widget__title">
+            <span class="title__span">identificate</span>
+          </h3>
           <form class="widget__form">
             <label for="name">Nombre:</label>
             <input type="text" name="name" id="name" />
@@ -110,8 +114,8 @@
             <input type="email" name="email" id="email" />
             <label for="password">Contraseña:</label>
             <input type="password" name="password" id="password" />
+            <input type="submit" value="Entrar" />
           </form>
-          <input type="submit" value="Entrar" />
         </div>
       </aside>
     </div>
