media querys responsive

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       href="assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
 
     <script src="assets/js/main.js" defer></script>
 
@@ -20,6 +21,11 @@
     <div class="layout">
       <header class="layout__header">
         <h1 class="header__title">proyecto js</h1>
+        <button class="header__btn">
+          <div></div>
+          <div></div>
+          <div></div>
+        </button>
         <nav class="header__nav">
           <ul class="nav__menu">
             <li class="menu__item">
