corrección html y css slider. Aplicación script transición slider

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
         <div class="slider__content">
           <img
             src="./assets/img/hojas.jpg"
-            alt="verano"
+            alt="otoño"
             class="slider__img slider__img--active"
           />
+          <img src="./assets/img/rojo.jpg" alt="otoño" class="slider__img" />
+          <img src="./assets/img/cielo.jpg" alt="cielo" class="slider__img" />
         </div>
         <button class="slider__btn slider__btn-next">
           <i class="slider__icon fa-solid fa-caret-right"></i>
