cargue de articulos html mediante array de objetos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </button>
       </section>
       <main class="layout__article">
-        <div class="article_content">
+        <!-- <div class="article_content">
           <h2 class="article__title">articulo 1</h2>
           <span class="article__date">publicado el 7 marzo del 2024</span>
           <p class="article__text">
@@ -96,7 +96,7 @@
             enim, fugiat dolorum!
           </p>
           <button type="button" class="article__button">leer mas</button>
-        </div>
+        </div> -->
       </main>
       <aside class="widget">
         <div class="widget__content">
