--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
 
-    <script src="assets/js/main.js" defer></script>
+    <script src="./assets/js/main.js" defer></script>
+    <script src="./assets/js/login.js" defer></script>
 
     <title>Web JS Vainilla</title>
   </head>
@@ -64,39 +65,7 @@
         </button>
       </section>
       <main class="layout__article">
-        <!-- <div class="article_content">
-          <h2 class="article__title">articulo 1</h2>
-          <span class="article__date">publicado el 7 marzo del 2024</span>
-          <p class="article__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
-            aliquam voluptas nulla praesentium rem numquam nostrum asperiores
-            pariatur assumenda, in odit cumque facere? Hic quisquam iusto labore
-            enim, fugiat dolorum!
-          </p>
-          <button type="button" class="article__button">leer mas</button>
-        </div>
-        <div class="article_content">
-          <h2 class="article__title">articulo 2</h2>
-          <span class="article__date">publicado el 7 marzo del 2024</span>
-          <p class="article__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
-            aliquam voluptas nulla praesentium rem numquam nostrum asperiores
-            pariatur assumenda, in odit cumque facere? Hic quisquam iusto labore
-            enim, fugiat dolorum!
-          </p>
-          <button type="button" class="article__button">leer mas</button>
-        </div>
-        <div class="article_content">
-          <h2 class="article__title">articulo 3</h2>
-          <span class="article__date">publicado el 7 marzo del 2024</span>
-          <p class="article__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
-            aliquam voluptas nulla praesentium rem numquam nostrum asperiores
-            pariatur assumenda, in odit cumque facere? Hic quisquam iusto labore
-            enim, fugiat dolorum!
-          </p>
-          <button type="button" class="article__button">leer mas</button>
-        </div> -->
+        <!-- Aquí cargan los artículos -->
       </main>
       <aside class="widget">
         <div class="widget__content">
@@ -115,15 +84,17 @@
           <h3 class="widget__title">
             <span class="title__span">identificate</span>
           </h3>
-          <form class="widget__form">
-            <label for="name">Nombre:</label>
-            <input type="text" name="name" id="name" />
-            <label for="email">Correo:</label>
-            <input type="email" name="email" id="email" />
-            <label for="password">Contraseña:</label>
-            <input type="password" name="password" id="password" />
-            <input type="submit" value="Entrar" />
-          </form>
+          <div class="content__widget__form">
+            <form class="widget__form">
+              <label for="name">Nombre:</label>
+              <input type="text" name="name" id="name" />
+              <label for="email">Correo:</label>
+              <input type="email" name="email" id="email" />
+              <label for="password">Contraseña:</label>
+              <input type="password" name="password" id="password" />
+              <input type="submit" value="Entrar" id="wsubmit" />
+            </form>
+          </div>
         </div>
       </aside>
     </div>
