--- a/acordeon.html
+++ b/acordeon.html
@@ -67,67 +67,68 @@
       </section>
       <main class="layout__article">
         <div class="article__content">
-          <div class="accordion __container">
-            <ul class="accordion">
-              <h2 class="article__title">FAQs</h2>
-              <li>
-                <label for="primero">¿Qué es JavaScript?</label>
-                <input
-                  type="checkbox"
-                  name="primero"
-                  id="primero"
-                  class="faqcheck"
-                />
-                <div class="accordion__content">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Vel, odio earum. Nemo veniam iure totam quos perspiciatis
-                    eveniet animi quam ut labore autem possimus exercitationem,
-                    nesciunt, impedit ratione hic ad?
-                  </p>
-                </div>
-              </li>
-              <li>
-                <label for="segundo"
-                  >¿Frameworks mas populares de JavaScript?</label
-                >
-                <input type="checkbox" name="segundo" id="segundo" />
-                <div class="accordion__content">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Vel, odio earum. Nemo veniam iure totam quos perspiciatis
-                    eveniet animi quam ut labore autem possimus exercitationem,
-                    nesciunt, impedit ratione hic ad?
-                  </p>
-                </div>
-              </li>
-              <li>
-                <label for="tercero">¿Para qué sirve JavaScript?</label>
-                <input type="checkbox" name="tercero" id="tercero" />
-                <div class="accordion__content">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Vel, odio earum. Nemo veniam iure totam quos perspiciatis
-                    eveniet animi quam ut labore autem possimus exercitationem,
-                    nesciunt, impedit ratione hic ad?
-                  </p>
-                </div>
-              </li>
-              <li>
-                <label for="cuarto"
-                  >¿Cúales son los lenguajes mas populares del 2024?</label
-                >
-                <input type="checkbox" name="cuarto" id="cuarto" />
-                <div class="accordion__content">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Vel, odio earum. Nemo veniam iure totam quos perspiciatis
-                    eveniet animi quam ut labore autem possimus exercitationem,
-                    nesciunt, impedit ratione hic ad?
-                  </p>
-                </div>
-              </li>
-            </ul>
+          <h2 class="article__title">FAQs</h2>
+          <div class="faqs">
+            <div class="faq">
+              <div class="faq__head">
+                <h3 class="faq__head__title">¿Qué es JavaScript?</h3>
+                <i class="faq__head__icon fa-solid fa-plus"></i>
+              </div>
+              <div class="faq__content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Architecto, deserunt voluptatem! Harum nihil voluptatem
+                  consequuntur rerum, modi earum? Reprehenderit, labore ullam.
+                  Doloremque vel modi iusto eum quas illo numquam provident.
+                </p>
+              </div>
+            </div>
+            <div class="faq">
+              <div class="faq__head">
+                <h3 class="faq__head__title">
+                  ¿Frameworks mas populares de JavaScript?
+                </h3>
+                <i class="faq__head__icon fa-solid fa-plus"></i>
+              </div>
+              <div class="faq__content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Architecto, deserunt voluptatem! Harum nihil voluptatem
+                  consequuntur rerum, modi earum? Reprehenderit, labore ullam.
+                  Doloremque vel modi iusto eum quas illo numquam provident.
+                </p>
+              </div>
+            </div>
+            <div class="faq">
+              <div class="faq__head">
+                <h3 class="faq__head__title">¿Para qué sirve JavaScript?</h3>
+                <i class="faq__head__icon fa-solid fa-plus"></i>
+              </div>
+              <div class="faq__content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Architecto, deserunt voluptatem! Harum nihil voluptatem
+                  consequuntur rerum, modi earum? Reprehenderit, labore ullam.
+                  Doloremque vel modi iusto eum quas illo numquam provident.
+                </p>
+              </div>
+            </div>
+            <div class="faq">
+              <div class="faq__head">
+                <h3 class="faq__head__title">
+                  ¿Cúales son los lenguajes mas populares del 2024?
+                </h3>
+                <i class="faq__head__icon fa-solid fa-plus"></i>
+              </div>
+              <div class="faq__content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Architecto, deserunt voluptatem! Harum nihil voluptatem
+                  consequuntur rerum, modi earum? Reprehenderit, labore ullam.
+                  Doloremque vel modi iusto eum quas illo numquam provident.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </main>
