emelento cambiador de temas html, css y js. Aplicación de estilos de colores css mediante variables

--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,8 @@
     ></script>
     <script src="./assets/js/contact.js" defer></script>
 
+    <script src="./assets/js/theme.js" defer></script>
+
     <title>Web JS Vainilla</title>
   </head>
   <body>
@@ -44,9 +46,6 @@
             </li>
             <li class="menu__item">
               <a href="./acordeon.html">acordeón</a>
-            </li>
-            <li class="menu__item">
-              <a href="./sobremi.html">sobre mi</a>
             </li>
             <li class="menu__item">
               <a href="./contacto.html">contacto</a>
@@ -184,6 +183,12 @@
           </div>
         </div>
       </aside>
+    </div>
+    <!-- CAMBIADOR DE TEMAS -->
+    <div class="themes">
+      <div class="theme__green"></div>
+      <div class="theme__orange"></div>
+      <div class="theme__blue"></div>
     </div>
     <footer class="footer">
       Todos los derechos reservados a Victor Robles &copy;
