--- a/acordeon.html
+++ b/acordeon.html
@@ -17,6 +17,8 @@
     <script src="./assets/js/login.js" defer></script>
     <script src="./assets/js/accordeon.js" defer></script>
 
+    <script src="./assets/js/theme.js" defer></script>
+
     <title>Web JS Vainilla</title>
   </head>
   <body>
@@ -38,9 +40,6 @@
             </li>
             <li class="menu__item">
               <a href="./acordeon.html">acordeón</a>
-            </li>
-            <li class="menu__item">
-              <a href="./sobremi.html">sobre mi</a>
             </li>
             <li class="menu__item">
               <a href="./contacto.html">contacto</a>
@@ -162,6 +161,12 @@
           </div>
         </div>
       </aside>
+    </div>
+    <!-- CAMBIADOR DE TEMAS -->
+    <div class="themes">
+      <div class="theme__green"></div>
+      <div class="theme__orange"></div>
+      <div class="theme__blue"></div>
     </div>
     <footer class="footer">
       Todos los derechos reservados a Victor Robles &copy;
