--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
     <script src="./assets/js/main.js" defer></script>
     <script src="./assets/js/article.js" defer></script>
+
     <script src="./assets/js/login.js" defer></script>
+
+    <script src="./assets/js/theme.js" defer></script>
 
     <title>Web JS Vainilla</title>
   </head>
@@ -38,9 +41,6 @@
             </li>
             <li class="menu__item">
               <a href="./acordeon.html">acordeón</a>
-            </li>
-            <li class="menu__item">
-              <a href="./sobremi.html">sobre mi</a>
             </li>
             <li class="menu__item">
               <a href="./contacto.html">contacto</a>
@@ -98,6 +98,12 @@
           </div>
         </div>
       </aside>
+    </div>
+    <!-- CAMBIADOR DE TEMAS -->
+    <div class="themes">
+      <div class="theme__green"></div>
+      <div class="theme__orange"></div>
+      <div class="theme__blue"></div>
     </div>
     <footer class="footer">
       Todos los derechos reservados a Victor Robles &copy;
