--- a/reloj.html
+++ b/reloj.html
@@ -26,6 +26,8 @@
 
     <script src="./assets/js/reloj.js" defer></script>
 
+    <script src="./assets/js/theme.js" defer></script>
+
     <title>Web JS Vainilla</title>
   </head>
   <body>
@@ -47,9 +49,6 @@
             </li>
             <li class="menu__item">
               <a href="./acordeon.html">acordeón</a>
-            </li>
-            <li class="menu__item">
-              <a href="./sobremi.html">sobre mi</a>
             </li>
             <li class="menu__item">
               <a href="./contacto.html">contacto</a>
@@ -140,6 +139,12 @@
           </div>
         </div>
       </aside>
+    </div>
+    <!-- CAMBIADOR DE TEMAS -->
+    <div class="themes">
+      <div class="theme__green"></div>
+      <div class="theme__orange"></div>
+      <div class="theme__blue"></div>
     </div>
     <footer class="footer">
       Todos los derechos reservados a Victor Robles &copy;
